--- a/Pages/Clienti/Index.cshtml
+++ b/Pages/Clienti/Index.cshtml
@@ -2,7 +2,7 @@
 @model InaBeauty.Pages.Clienti.IndexModel
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Clienti";
 }
 
 <h1>Clienti</h1>
