--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -4,7 +4,31 @@
     ViewData["Title"] = "Home page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-</div>
+<body>
+    <div row mb-auto>
+        <div class="col-md-4">
+            <div class="row no-gutters border mb-4">
+                <div class="col p-4 mb-4 ">
+                    <p style="text-align:center" class="card-text">
+                        "Dragostea de frumuseţe este Gust. Crearea de frumuseţe este Arta" – Ralph Waldo Emerson
+                    </p>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-4">
+            <div class="row no-gutters border mb-4">
+                <div class="col p-4 d-flex flex-column position-static">
+                    <p style="text-align:center">
+                        <a href="https://www.beautynailhairsalons.com/RO/Baia-Mare/181814162242848/Salon-Ina-Beautyline" class="stretched-link"  >Viziteaza-ne!</a>
+                    </p>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-4">
+            <div class="row no-gutters border mb-4">
+
+            </div>
+        </div>
+    </div>
+</body>
+
