--- a/Pages/Servicii/Index.cshtml
+++ b/Pages/Servicii/Index.cshtml
@@ -2,13 +2,13 @@
 @model InaBeauty.Pages.Servicii.IndexModel
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Servicii";
 }
 
-<h1>Index</h1>
+<h1>Servicii</h1>
 
 <p>
-    <a asp-page="Create">Create New</a>
+    <a asp-page="Create">Adaugare serviciu nou</a>
 </p>
 <table class="table">
     <thead>
